# apichain-backend

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PORTING.md  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
.claude/: CLAUDE.md
.do/: app.yaml
.github/workflows/: ci.yml  quality-gates.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 8547454dfd88_phase1_spine_baseline.py
app/: config.py  database.py  deps.py  errors.py  main.py
app/models/: __init__.py  audit.py  auth.py  batch.py  enums.py  identity.py
app/routers/: __init__.py  _context.py  audit.py  auth.py  batches.py  farmers.py  meta.py
app/schemas/: audit.py  auth.py  batches.py  farmers.py  meta.py
app/services/: audit_log.py  canonical.py  consent.py  geocode.py  idempotency.py  integrity.py  refresh_tokens.py  security.py
scripts/: export_openapi.py
tests/: conftest.py  test_audit_log.py  test_consent.py  test_contract.py  test_endpoints.py  test_geocode.py  test_hash_determinism.py  test_idempotency.py  test_integrity.py  test_migrations.py  test_ping.py  test_rbac.py  test_refresh_tokens.py  test_security.py
