[project]
name = "apichain-backend"
version = "2.0.0"
description = "ApiChain v2 backend: FastAPI + PostgreSQL/PostGIS, hash-chained audit log, Merkle anchoring via OpenTimestamps"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "eth-hash[pycryptodome]>=0.8.0",
    "fastapi>=0.139.2",
    "geoalchemy2>=0.20.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "schemathesis>=4.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
ignore_missing_imports = true
check_untyped_defs = true
